# to_do_cli

./: categories.json  pyproject.toml  requirements.txt  todocli.py  todos.db
core/: database.py  functions.py  model.py
