[tool.poetry]
name = "to-do-cli"
version = "0.1.0"
description = ""
authors = ["Ozgur Can Arslan <ozgurcanrsln@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
rich = "^13.6.0"
db-sqlite3 = "^0.0.1"
datetime = "^5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
